prettier fix all, eslint custom rules, migrations update, database types update, fontawesome

--- a/database/types/template.handlebars
+++ b/database/types/template.handlebars
@@ -14,7 +14,7 @@ export interface {{interfaceName}} {{#if extends}}extends {{extends}} {{/if}}{
 
   /* {{comment}} */
   {{/if}}
-  {{propertyName}}{{#if optional}}?{{/if}}: {{propertyType}}{{#if nullable}} | null{{/if}};
+  {{propertyName}}{{#if optional}}?{{/if}}: {{propertyType}}{{#if nullable}} | null{{/if}}
   {{/each}}
 }
 {{/each}}
